--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -22,25 +22,25 @@ key-mapping.preset = 'qwerty'
 on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 
 [gaps]
-inner.horizontal = 35 
-inner.vertical =   35
+inner.horizontal = 0 
+inner.vertical =   0
 outer.left =       0
-outer.bottom =     35
-outer.top =        35
+outer.bottom =     0
+outer.top =        0
 outer.right =      0
 
 [mode.main.binding]
-alt-enter = 'exec-and-forget /Users/tylerfischer/.bun/bin/bun run /Users/tylerfischer/Scripts/run.ts'
-alt-o ='exec-and-forget ollama run qwen2.5-coder:14b'
-
 alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
-
 alt-h = 'focus left'
 alt-j = 'focus down'
 alt-k = 'focus up'
 alt-l = 'focus right'
+alt-n = 'focus down'
+alt-p = 'focus up'
 alt-e = 'balance-sizes'
+alt-g = 'resize smart +100'
+
 
 alt-1 = 'workspace 1'
 alt-2 = 'workspace 2'
