--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -24,10 +24,10 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 [gaps]
 inner.horizontal = 0 
 inner.vertical =   0
-outer.left =       0
+outer.left =       90
 outer.bottom =     0
 outer.top =        0
-outer.right =      0
+outer.right =      90
 
 [mode.main.binding]
 alt-slash = 'layout tiles horizontal vertical'
@@ -39,7 +39,11 @@ alt-l = 'focus right'
 alt-n = 'focus down'
 alt-p = 'focus up'
 alt-e = 'balance-sizes'
-alt-g = 'resize smart +100'
+alt-u = 'resize smart +100'
+alt-y = 'resize smart -100'
+alt-t = 'exec-and-forget open -na "Ghostty"'
+alt-x = 'close'
+alt-r = 'exec-and-forget aerospace reload-config'
 
 
 alt-1 = 'workspace 1'
@@ -58,3 +62,5 @@ alt-shift-4 = 'move-node-to-workspace 4'
 alt-shift-5 = 'move-node-to-workspace 5'
 alt-shift-7 = 'move-node-to-workspace 7'
 alt-shift-8 = 'workspace 8'
+
+
